kubelatest/backend-3.yaml

kind: Service
apiVersion: v1
metadata:
  name: backend-3
spec:
  selector:
    app: backend-3
  ports:
    - port: 8080 # Default port for image
