kubelatest/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: always
    nginx.ingress.kubernetes.io/canary-by-header-value: target
    nginx.ingress.kubernetes.io/canary-by-cookie: always
    nginx.ingress.kubernetes.io/configuration-snippet: | expires 60;
    nginx.ingress.kubernetes.io/session-cookie-expires: "60"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "60"
    nginx.ingress.kubernetes.io/session-cookie-name: username
spec:
  rules:
  - http:
      paths:
        - path: /backend1
          backend:
            serviceName: backend-1
            servicePort: 8080
        - path: /backend2
          backend:
            serviceName: backend-2
            servicePort: 8080
        - path: /backend3
          backend:
            serviceName: backend-3
            servicePort: 8080
        - path: /hit_backend
          backend:
            serviceName: route-service
            servicePort: 8080
